# calendar_generator

./: LICENSE  pyproject.toml  readme.md
src/calendar_generator/: __init__.py  core.py  types.py
tests/: content.py  performance.py
